Switch to maven

--- a/me-backend/src/main/resources/application.properties
+++ b/me-backend/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb://root:password@db:27017/mars
+spring.data.mongodb.uri=mongodb://app:password@ds229790.mlab.com:29790/mars
