--- a/me-frontend/package.json
+++ b/me-frontend/package.json
@@ -10,9 +10,19 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "cors": "^2.8.4",
+    "jquery": "^3.3.1",
+    "mrp-api": "0.0.2",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.3",
     "vue": "^2.5.11",
-    "vue-router": "^3.0.1"
+    "vue-cli": "^2.9.3",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "browserslist": [
     "> 1%",
@@ -30,7 +40,7 @@
     "node-sass": "^4.5.3",
     "npm": "^6.0.1",
     "sass-loader": "^6.0.6",
-    "vue-loader": "^13.0.5",
+    "vue-loader": "^13.7.1",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
