Create proxy for NASA API

--- a/me-backend/src/main/resources/application.properties
+++ b/me-backend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.data.mongodb.uri=mongodb://app:password@ds229790.mlab.com:29790/mars
+
+mars.explorer.nasa.api.key=d4AMs5679WgbHT8C38EoYbCI8ssPsWEdGDRzVgEi
+mars.explorer.nasa.api.url=https://api.nasa.gov/mars-photos/api/v1/
