--- a/me-backend/src/main/resources/application-dev.properties
+++ b/me-backend/src/main/resources/application-dev.properties
@@ -9,6 +9,8 @@ facebook.client.userAuthorizationUri=https://www.facebook.com/dialog/oauth
 facebook.client.tokenName=oauth_token
 facebook.client.authenticationScheme=query
 facebook.client.clientAuthenticationScheme=form
+facebook.client.use-current-uri=false
+facebook.client.pre-established-redirect-uri=http://localhost:8080
 facebook.resource.user-info-uri=https://graph.facebook.com/me
 
 # NASA API
