--- a/me-frontend/package.json
+++ b/me-frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bindings": "^1.3.0",
     "bootstrap": "^4.1.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cors": "^2.8.4",
+    "debug-mode": "^1.0.8",
+    "integer": "^1.0.5",
     "jquery": "^3.3.1",
     "mrp-api": "0.0.2",
     "popper": "^1.0.1",
