--- a/me-frontend/package.json
+++ b/me-frontend/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "buildDev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "buildDev": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
@@ -21,10 +21,13 @@
     "mrp-api": "0.0.2",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
-    "vue": "^2.5.11",
+    "rxjs": "^6.2.1",
+    "vue": "^2.5.16",
+    "vue-awesome": "^2.3.7",
     "vue-cli": "^2.9.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vue-rx": "^6.0.0",
     "xmlhttprequest": "^1.8.0"
   },
   "browserslist": [
@@ -41,7 +44,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
-    "npm": "^6.0.1",
+    "npm": "^6.1.0",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.7.1",
     "vue-template-compiler": "^2.4.4",
