--- a/me-backend/src/main/resources/application-dev.properties
+++ b/me-backend/src/main/resources/application-dev.properties
@@ -2,8 +2,8 @@
 spring.data.mongodb.uri=mongodb://${DB_USERNAME}:${DB_PASSWORD}@ds229790.mlab.com:29790/mars
 
 # Security
-#facebook.client.client-id=${FACEBOOK_CLIENT_ID}
-#facebook.client.client-secret=${FACEBOOK_CLIENT_SECRET}
+facebook.client.client-id=${FACEBOOK_CLIENT_ID}
+facebook.client.client-secret=${FACEBOOK_CLIENT_SECRET}
 facebook.client.access-token-uri=https://graph.facebook.com/oauth/access_token
 facebook.client.userAuthorizationUri=https://www.facebook.com/dialog/oauth
 facebook.client.tokenName=oauth_token
