--- a/me-backend/src/test/resources/application.properties
+++ b/me-backend/src/test/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=mongodb://test:password@ds129770.mlab.com:29770/mars-test
+spring.data.mongodb.uri=mongodb://app:password1@ds261470.mlab.com:61470/mars-db-test
 
 spring.profiles.active=test
